[package]
name = "typed-string-encoding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.2.0"
serde = { version = "1.0.154", features = ["derive", "serde_derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
time = "0.3.20"
