[package]
name = "typed-string-encoding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.7"
time = "0.3"
